--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "personalincometax",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-	
+  "scripts": {	
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-	"postinstall": "ng build --aot -prod",
+	"postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
